clean: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,6 @@ work.ipynb
 *.py[cod]
 *$py.class
 *.xml
-.vscode
 # C extensions
 *.so
 *.xlsx
@@ -37,8 +36,6 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-.vscode
-*.vscode
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -118,8 +115,6 @@ celerybeat.pid
 
 # SageMath parsed files
 *.sage.py
-.vscode
-.vscode
 # Environments
 .env
 .venv
@@ -169,7 +164,7 @@ dmypy.json
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/tasks.json
-!.vscode/launch.json
+!.vscode/settings.json
 *.code-workspace
 
 ### VisualStudioCode Patch ###
